--- a/wordpress_plugin/styles.css
+++ b/wordpress_plugin/styles.css
@@ -7,6 +7,7 @@ body{
 	display: flex;
 width: 100%;
 background-color:lightsteelblue;
+flex-flow: column wrap;
 }
 h1{
 	margin-left: 1% !important;
@@ -28,7 +29,7 @@ select{
 .float-left {
 	padding:10px;
 	
-	width:30%;
+	width:80%;
 	margin-left: 2.5%;
 }
   
