--- a/wordpress_plugin/styles.css
+++ b/wordpress_plugin/styles.css
@@ -108,3 +108,62 @@ tbody a {
 tbody a:hover {
 	color:blue;
 }
+
+#kurssiTaulu {
+	display: block;
+}
+
+#eiYhteytta {
+	display: none;
+	color: red;
+}
+
+#eiKursseja {
+	display: none;
+	color: blue;
+}
+
+.selectBox {
+	position: relative;
+}
+
+.selectBox select {
+	width: 100%;
+}
+
+.overSelect {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+}
+
+/*Korkeakoulu valikon tyylit*/
+#checkboxes1 {
+	display: none;
+	border: 1px #dadada solid;
+	background-color: white;
+	position: absolute;
+	font-size: 1.5rem;
+	width: 100%;
+	height: 10em;
+	overflow-y: scroll;
+	z-index: 1;
+}
+
+#checkboxes1 label input {
+	margin-right: 1em;
+	width: 1.5em;
+	height: 1.5em;
+}
+
+#checkboxes1 label {
+	display: block;
+	margin-top: 1%;
+}
+
+#checkboxes1 label:hover {
+	background-color: #1e90ff;
+	color: white;
+}
