--- a/wordpress_plugin/styles.css
+++ b/wordpress_plugin/styles.css
@@ -2,8 +2,8 @@
 /* koko sisältö */
 #sisältö{
 	display: flex;
-width: 80%;
-flex-flow: column wrap;
+	width: 80%;
+	flex-flow: column wrap;
 	margin-left:auto;
 	margin-right:auto;
 }
@@ -18,7 +18,7 @@ h3{
 	margin-bottom: 3% !important;
 }
 
-/* yläreinan div-valikot */
+/* yläreunan div-valikot */
 select{
     font-size: 1.5rem;
 	width: 100%;
@@ -26,7 +26,6 @@ select{
 
 .float-left {
 	padding:10px;
-	
 	width:80%;
 	margin-left: 2.5%;
 }
@@ -166,4 +165,19 @@ tbody a:hover {
 #checkboxes1 label:hover {
 	background-color: #1e90ff;
 	color: white;
+}
+
+/*radiobuttonit*/
+label{
+	font-size: 1.5rem;
+	font-family: Arial;
+}
+
+input[type='radio'] { 
+	transform: scale(1.5); 
+}
+
+.radiorivi {
+	float: left;
+
 }
