--- a/wordpress_plugin/styles.css
+++ b/wordpress_plugin/styles.css
@@ -1,7 +1,9 @@
 
 /* koko sisältö */
 body{
+	
 	background-color: #d7f9f5;
+	background-image: radial-gradient(rgb(243, 242, 231), rgb(150, 243, 228));
 }
 
 #sisältö{
@@ -12,7 +14,7 @@ body{
 	margin-right:auto;
 }
 h1{
-	margin-left: 1% !important;
+	/*margin-left: 1% !important;*/
 	letter-spacing: 3px;
 	font-size: 3rem;
 }
@@ -34,12 +36,35 @@ select{
 
 .float-left {
 	padding:10px;
-	padding:10px 10px 10px 0;
-	width:80%;
-	
+	padding:10px 0px 10px 0;
 }
+/* päivitys lähelle pääotsikkoa  */
+#paivitys{
+	margin-top: 0;
+}
+/* koulu- ja maakuntavalikot vierekkäin */
+.flex-container{
+	display: flex;
+}
+.selectBox{
+	width: 50%;
+}
+#selectBoxMaakunta{
+	margin-left: 20px;
+}
+
   
 @media screen and (max-width:740px) {
+	.flex-container{
+		display: block;
+	}
+	.selectBox{
+		width: 100%;
+	}
+	#selectBoxMaakunta{
+		margin-left: 0;
+	}
+
 	select {
 	  width:100% !important;
 	}
@@ -65,33 +90,20 @@ select{
 }
 
 /* nappi */
-.nappiKeskelle{
-   /*text-align: center;*/
-   margin-bottom: 10%;
+
+.myButton{
+	background-color: white;
+	font-size: 20px;
+	padding: 14px 40px;
+	border-radius: 12px;
+	color: orangered;
+	font-weight: bold;
+	border: 2px solid orangered; 
 }
-.myButton {
-	box-shadow:inset 0px 1px 0px 0px #a4e271; /*  box-shadow:inset 0px 1px 0px 0px #a4e271;   */
-	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%); /*  background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);    */
-	background-color:#89c403; /*  background-color:#89c403;   */
-	border-radius:6px;
-	border:1px solid #74b807; /*  border:1px solid #74b807;  */
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:25px;
-	font-weight:bold;
-	padding:6px 24px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #528009; /*  text-shadow:0px 1px 0px #528009;   */
-}
-.myButton:hover {
-	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%); /*  background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);  */
-	background-color:#77a809; /*  background-color:#77a809  */
-}
-.myButton:active {
-	position:relative;
-	top:1px;
+.myButton:hover{
+	background-color: orangered;
+	color: white;
+	border: 2px solid white; 
 }
 
 
