--- a/wordpress_plugin/styles.css
+++ b/wordpress_plugin/styles.css
@@ -122,7 +122,7 @@ select{
 
 /* nappi */
 
-.haeNappi{
+/*.haeNappi{
 	background-color: white;
 	font-size: 30px;
 	padding: 14px 40px;
@@ -135,7 +135,7 @@ select{
 	background-color: orangered;
 	color: white;
 	border: 2px solid white; 
-}
+}*/
 
 
 /* kurssitaulu */
@@ -164,23 +164,23 @@ tbody a:hover {
 	display: block;
 }
 
-#eiYhteytta {
+#eiYhteytta, #eiKursseja {
 	display: none;
-	color: red;
+	/*color: red;*/
 }
 
-#eiKursseja {
+/*#eiKursseja {
 	display: none;
 	color: blue;
-}
+}*/
 
 .valikko {
 	position: relative;
 }
 
-.valikko select {
+/*.valikko select {
 	width: 100%;
-}
+}*/
 
 .kouluLista {
 	position: absolute;
@@ -198,7 +198,7 @@ tbody a:hover {
 	position: absolute;
 	font-size: 1.5rem;
 	width: 100%;
-	height: 10em;
+	height: 20em;
 	overflow-y: scroll;
 	z-index: 1;
 }
@@ -220,15 +220,15 @@ tbody a:hover {
 }
 
 /*radiobuttonit*/
-label{
+/*label{
 	font-size: 1.5rem;
 	font-family: Arial;
-}
+}*/
 
-input[type='radio'] { 
+/*input[type='radio'] { 
 	transform: scale(1.5); 
-}
+}*/
 
-.painikkeet {
+/*.painikkeet {
 	float: left;
-}
+}*/
