--- a/wordpress_plugin/styles.css
+++ b/wordpress_plugin/styles.css
@@ -1,81 +1,38 @@
 
-/* koko sisältö 
-body{
-	
-	background-color: #d7f9f5;
-	background-image: radial-gradient(rgb(243, 242, 231), rgb(150, 243, 228));
-}
-*/
-
-/*
-#sisältö{
-	display: flex;
-    width: 80%;
-    flex-flow: column wrap;
-	margin-left:auto;
-	margin-right:auto;
-} 
-*/
-
-/*
-#isoOtsikko{
-	letter-spacing: 4px !important;
-	font-size: 4rem ;
-}
-*/
-
-/*
-div#sisältö h2{
-	margin-bottom: 1% !important;
-	margin-left: 1% !important;
-	color: orangered;
-}
-*/
-
-/* TÄMÄ PITÄÄ OLLA CSS:SSÄ*/
 div#sisältö h3{
 	margin-bottom: 1% !important;
 	color: orangered;
 }
 
 
-/* yläreunan div-valikot */ /* TÄMÄ PITÄÄ OLLA CSS:SSÄ*/
+/* yläreunan div-valikot */
 select{
     font-size: 1.5rem;
 	width: 100%;
 }
 
-/*
-.osio {
-	padding:10px;
-	padding:10px 0px 10px 0;
-}
-*/
-
-/* päivitys lähelle pääotsikkoa  
-#paivitys{
-	margin-top: 0;
-}
-*/
-
-/* koulu- ja maakuntavalikot vierekkäin *//* TÄMÄ PITÄÄ OLLA CSS:SSÄ*/
+/* koulu- ja maakuntavalikot vierekkäin */
 .kouluOsio{
 	display: flex;
 }
 .valikkoOsio{
 	display: flex;
+	flex-flow: column nowrap;
 }
 
-/* TÄMÄ PITÄÄ OLLA CSS:SSÄ*/
+
 .valikko{
 	width: 50%;
 }
 
 .valikko2{
-	width: 50%;
+	flex-basis: 100%;
+	width: 100%;
+	display: flex;
+	flex-flow: row wrap;
 }
 
-/* TÄMÄ PITÄÄ OLLA CSS:SSÄ*/
+
 #valikkoMaakunta{
 	margin-left: 20px;
 }
@@ -97,7 +54,7 @@ select{
 	border-radius: 6px;
 	padding: 5px 5px;
   
-	/* Position the tooltip */
+	/* infotekstin paikka */
 	position: absolute;
 	z-index: 1;
 	bottom: 100%;
@@ -116,72 +73,6 @@ select{
   }
 
   
-@media screen and (max-width:740px) {
-	
-	.kouluOsio{
-		display: block;
-	}
-
-	.valikkoOsio{
-		display: block;
-	}
-	
-	.valikko, .valikko2{
-		width: 100%;
-	}
-	
-	#valikkoMaakunta{
-		margin-left: 0;
-	}
-    /*
-	select {
-	  width:100% !important;
-	}*/
-	
-	form{
-		width: 100%;
-	}
-	/*
-	#sisältö{
-		width: 100%;
-	}*/
-
-	
-	.osio{
-		width: 100%;
-		margin-left: 0%;
-		margin-bottom: 3%;
-	}
-	/*
-	.nappiKeskelle{
-		margin-top: 8% !important;
-		margin-bottom: 8% !important;
-	}
-	*/
-	/*
-	h2{
-		margin-left: 4% !important;
-	}
-*/
-}
-
-/* nappi */
-
-/*.haeNappi{
-	background-color: white;
-	font-size: 30px;
-	padding: 14px 40px;
-	border-radius: 12px;
-	color: orangered;
-	font-weight: bold;
-	border: 2px solid orangered; 
-}
-.haeNappi:hover{
-	background-color: orangered;
-	color: white;
-	border: 2px solid white; 
-}*/
-
 
 /* kurssitaulu */
 table {
@@ -211,13 +102,9 @@ tbody a:hover {
 
 #eiYhteytta, #eiKursseja {
 	display: none;
-	/*color: red;*/
+
 }
 
-/*#eiKursseja {
-	display: none;
-	color: blue;
-}*/
 
 .valikko {
 	position: relative;
@@ -227,9 +114,6 @@ tbody a:hover {
 	position: relative;
 }
 
-/*.valikko select {
-	width: 100%;
-}*/
 
 .kouluLista {
 	position: absolute;
@@ -268,16 +152,32 @@ tbody a:hover {
 	color: white;
 }
 
-/*radiobuttonit*/
-/*label{
-	font-size: 1.5rem;
-	font-family: Arial;
-}*/
+@media screen and (max-width:740px) {
+	
+	.kouluOsio{
+		display: block;
+	}
 
-/*input[type='radio'] { 
-	transform: scale(1.5); 
-}*/
+	.valikkoOsio{
+		display: block;
+	}
+	
+	.valikko, .valikko2{
+		width: 100%;
+	}
+	
+	#valikkoMaakunta{
+		margin-left: 0;
+	}
 
-/*.painikkeet {
-	float: left;
-}*/
+	form{
+		width: 100%;
+	}
+
+	.osio{
+		width: 100%;
+		margin-left: 0%;
+		margin-bottom: 3%;
+	}
+
+}
